# synapse-example-app

./: .clang-format  .gitignore  .gitmodules  .pre-commit-config.yaml  .scienv  CMakeLists.txt  CMakePresets.json  Dockerfile  LICENSE  README.md  build.sh  build_docker.sh  decoder.onnx  deploy.sh  find_channels.py  manifest.json  package.sh  run.sh  sim_to_ns5.py  start_docker.sh  vcpkg.json
client/: .gitignore  README.md  collect_training_data.py  listen_to_joystick.py  model.py  plot_spikes.py  pyproject.toml  request_reset.py  requirements.txt  synapse_decode.py  update_channels.py
cmake/: protos.cmake
config/: config.json  easy_test.json  easy_train.json  scinetics.json  sciplex.json  sciplex_128.json  sciplex_96.json  sciplex_gpio.json  simulator.json  simulator_32ch.json
deploy/: deploy.py  requirements.txt
electrode_maps/: cereplex_128.json  cereplex_96.json  mea_28.json  mea_32.json
game/: bci_game.py
include/apps/: speech_decoder.hpp
include/synapse-example-app/: example_app.hpp
ops/docker/: Dockerfile  Dockerfile.arm64
ops/keys/: science-repo-public.asc
ops/package/: package.sh
ops/package/scripts/: launch_synapse_app.sh  postinstall.sh  preremove.sh
ops/package/systemd/: synapse-example-app.service
proto/: example_app.proto
src/: circular_buffer.hpp  decoder.cpp  decoder.hpp  fixed_weight_decoder.cpp  fixed_weight_decoder.hpp  main.cpp  speech_decoder.cpp  speech_decoder.hpp  spike_detector.cpp  spike_detector.hpp
src/synapse-example-app/: example_app.cpp
training/: train_decoder.py
